# dbmodel

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/: dependabot.yaml
.github/workflows/: python-app.yaml
db_model/: __init__.py  core.py  dataclass_utils.py  field.py  mapped.py  relationship.py  sa_types.py  types_.py  typing_.py  typing_utils.py
db_model/engine/: __init__.py  result.py
db_model/ext/: mypy_plugin.py
db_model/orm/: __init__.py  session.py
db_model/sql/: __init__.py  _select.py
scripts/: build_select.py  template.py.jinja2
test/: conftest.py  test_model.py  test_relationship.py  test_types.yaml
test/mypy/: pyproject.toml  test_mypy.py
test/mypy/cases/: input_1.py  input_2.py
