[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
authors = [
  {name = "Andrew Truong"},
]
classifiers = [
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "sqlalchemy>=1.4.36",
  "sqlalchemy-utils>=0.38.2",
  "typing-extensions>=4.2.0",
]
dynamic = ["version", "description"]
name = "db_model"
readme = "README.md"
requires-python = "~=3.9"

[project.optional-dependencies]
test = [
  "pytest >=2.7.3",
  "pytest-cov",
]

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
include = '\.pyi?$'
line-length = 120
target-version = ['py39']

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "def __str__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "if typing.TYPE_CHECKING:",
  "overload",
]

[tool.coverage.run]
branch = true
omit = ["tests/fixtures/*"]
source = ["db_model"]

[tool.isort]
profile = "black"

[tool.mypy]
plugins = ["db_model/ext/mypy_plugin.py"]

[tool.pytest.ini_options]
addopts = "-ra -v --durations=5 --cov-report term --cov=db_model"
