[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
authors = [
  {name = "Andrew Truong"},
]
classifiers = [
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "sqlalchemy>=1.4.36",
  "typing-extensions>=4.2.0",
]
dynamic = ["version", "description"]
name = "db_model"
readme = "README.md"
requires-python = "~=3.9"

[project.optional-dependencies]
dev = [
  "autoflake==1.4",
  "black==22.3.0",
  "blacken-docs==1.12.1",
  "flake8==4.0.1",
  "isort==5.10.1",
  "mypy==0.971",
  "mypy-extensions==0.4.3",
  "pre-commit==2.18.1",
  "sqlalchemy[mypy]==2.0.5",
  "Jinja2==3.1.1",
]
test = [
  "pytest == 7.1.2",
  "pytest-cov == 3.0.0",
  "pydantic == 1.9.0",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "def __str__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "if typing.TYPE_CHECKING:",
  "@overload",
]

[tool.coverage.run]
branch = true
omit = ["tests/fixtures/*"]
source = ["db_model"]

[tool.isort]
profile = "black"

[tool.mypy]
plugins = ["db_model/ext/mypy_plugin.py"]

[tool.pytest.ini_options]
addopts = "-ra -v --durations=5 --cov-report term-missing --cov=db_model"
